<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.capstone.smartbite.ui.kamera.CameraFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.capstone.smartbite.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_laporan"
        android:name="com.capstone.smartbite.ui.laporan.LaporanFragment"
        android:label="@string/title_laporan"
        tools:layout="@layout/fragment_laporan" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.capstone.smartbite.ui.profil.ProfilFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profil" />

    <fragment
        android:id="@+id/navigation_recipe_detail"
        android:name="com.capstone.smartbite.ui.recipe.RecipeDetailFragment"
        android:label="Recipe Detail"
        tools:layout="@layout/fragment_recipe_detail" />

    <fragment
        android:id="@+id/navigation_recipe_list"
        android:name="com.capstone.smartbite.ui.recipe.RecipeListFragment"
        android:label="All Recipes"
        tools:layout="@layout/fragment_recipe_list" />
</navigation>